USEI24 Complexity + Warnings